// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit tests for TestStepsView component: should render the component when tests failed and match snapshot 1`] = `
<div>
  <div
    class="test-steps-container"
  >
    <p
      class="test-steps-scenario-label"
      data-testid="test-steps-scenario-label"
    >
      Scenario:
    </p>
    <p
      class="test-steps-scenario-title"
      data-testid="test-steps-scenario-title"
    >
      The user is not able to create a record in the database which not exist
    </p>
    <div
      class="test-steps-result"
    >
      <div
        class="test-steps-icon"
      >
        <svg
          class="test-steps-failed-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16zm0-9.414l2.828-2.829 1.415 1.415L13.414 12l2.829 2.828-1.415 1.415L12 13.414l-2.828 2.829-1.415-1.415L10.586 12 7.757 9.172l1.415-1.415L12 10.586z"
            />
          </g>
        </svg>
      </div>
      <div
        class="test-steps-description"
      >
        <p>
          Given The user wants to create a new record "Anna Stock" in the Digital Registries database
        </p>
      </div>
    </div>
    <div
      class="test-steps-result"
    >
      <div
        class="test-steps-icon"
      >
        <svg
          class="test-steps-failed-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16zm0-9.414l2.828-2.829 1.415 1.415L13.414 12l2.829 2.828-1.415 1.415L12 13.414l-2.828 2.829-1.415-1.415L10.586 12 7.757 9.172l1.415-1.415L12 10.586z"
            />
          </g>
        </svg>
      </div>
      <div
        class="test-steps-description"
      >
        <p>
          When The user triggers an action to create a new record "Anna Stock" in the database
        </p>
      </div>
    </div>
    <div
      class="test-steps-result"
    >
      <div
        class="test-steps-icon"
      >
        <svg
          class="test-steps-failed-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16zm0-9.414l2.828-2.829 1.415 1.415L13.414 12l2.829 2.828-1.415 1.415L12 13.414l-2.828 2.829-1.415-1.415L10.586 12 7.757 9.172l1.415-1.415L12 10.586z"
            />
          </g>
        </svg>
      </div>
      <div
        class="test-steps-description"
      >
        <p>
          Then Operation results in an error for create "Anna Stock"
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit tests for TestStepsView component: should render the component when tests passed and match snapshot 1`] = `
<div>
  <div
    class="test-steps-container"
  >
    <p
      class="test-steps-scenario-label"
      data-testid="test-steps-scenario-label"
    >
      Scenario:
    </p>
    <p
      class="test-steps-scenario-title"
      data-testid="test-steps-scenario-title"
    >
      The user successfully creates record "John Smith" in the Digital Registries database.
    </p>
    <div
      class="test-steps-result"
    >
      <div
        class="test-steps-icon"
      >
        <svg
          class="test-steps-passed-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16zm-.997-4L6.76 11.757l1.414-1.414 2.829 2.829 5.656-5.657 1.415 1.414L11.003 16z"
            />
          </g>
        </svg>
      </div>
      <div
        class="test-steps-description"
      >
        <p>
          Given The user wants to create a new record "John Smith" in the Digital Registries database
        </p>
      </div>
    </div>
    <div
      class="test-steps-result"
    >
      <div
        class="test-steps-icon"
      >
        <svg
          class="test-steps-passed-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16zm-.997-4L6.76 11.757l1.414-1.414 2.829 2.829 5.656-5.657 1.415 1.414L11.003 16z"
            />
          </g>
        </svg>
      </div>
      <div
        class="test-steps-description"
      >
        <p>
          When The user triggers an action to create a new record "John Smith" in the database
        </p>
      </div>
    </div>
    <div
      class="test-steps-result"
    >
      <div
        class="test-steps-icon"
      >
        <svg
          class="test-steps-passed-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16zm-.997-4L6.76 11.757l1.414-1.414 2.829 2.829 5.656-5.657 1.415 1.414L11.003 16z"
            />
          </g>
        </svg>
      </div>
      <div
        class="test-steps-description"
      >
        <p>
          Then Operation finishes successfully for create user "John Smith"
        </p>
      </div>
    </div>
  </div>
</div>
`;
